[package]
name = "onnxbench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }

ndarray = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
image = "0.25"
show-image = { version = "=0.14.0", features = ["image", "raqote"] }
raqote = { version = "0.8", default-features = false }
tracing = "0.1"
ort = "=2.0.0-rc.9"
indicatif = "0.17.11"
